Create nav, header and footer

--- a/views/posts/new.ejs
+++ b/views/posts/new.ejs
@@ -1,6 +1,5 @@
 <%- include('./partials/header') %>
 
-<h1>Lakers4Life</h1>
-<h2>A place for everything Lakers</h2>
+<h1>New Post</h1>
 
 <%- include('./partials/footer') %>
