--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -1,6 +1,6 @@
 <%- include('./partials/header') %>
 
-<h1>Lakers4Life</h1>
-<h2>A place for everything Lakers</h2>
+<h1>Posts</h1>
+
 
 <%- include('./partials/footer') %>
