--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,9 +11,16 @@
   <nav>
     <a href="/">Home</a>
     &nbsp;|&nbsp;
+    <% if (user) { %>
+    <a href="/posts">All Posts</a>
+    &nbsp;|&nbsp;
     <a href="/posts/new">Add Post</a>
     &nbsp;|&nbsp;
-    <a href="/posts">All Posts</a>
+    <a href="/logout">LOG OUT</a>
+    &nbsp;|&nbsp;
+    <% } else { %>
+      <a href="/auth/google" class="login">Log In&nbsp;<img src="https://i.imgur.com/FHjYyi0.png"></a>
+    <% } %>
   </nav>
 
     
