--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,11 +16,12 @@
     &nbsp;|&nbsp;
     <a href="/posts/new">Add Post</a>
     &nbsp;|&nbsp;
-    <a href="/logout">LOG OUT</a>
+    <a href="/logout">Log Out</a>
     &nbsp;|&nbsp;
     <% } else { %>
-      <a href="/auth/google" class="login">Log In&nbsp;<img src="https://i.imgur.com/FHjYyi0.png"></a>
+      <a href="/auth/google" class="login">Log In/Sign Up&nbsp;<img src="https://i.imgur.com/FHjYyi0.png"></a>
     <% } %>
   </nav>
+  <h1>Lakers4Life</h1>
 
     
