--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -3,34 +3,32 @@
 <h1>Posts</h1>
 <% if (posts.length) { %>
     <table>
-      <thead>
-        <tr>
-          <th>User</th>
-          <th>Date</th>
-          <th>Post</th>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody>
-        <% let total = 0 %>
-        <% posts.forEach(function(p) { %>
-          <tr>
-            <td class="post-user"><img alt="avatar" src="<%= p.userAvatar %>" referrerpolicy="no-referrer" ><%= p.userName %></td>
-            <td><%= p.createdAt.toLocaleDateString() %></td>
-            <td><%= p.content %></td>
-            <% if (user?._id.equals(p.user)) { %>
-            <td><a href="/posts/<%= p._id %>">Update</a></td>
-            <% } %>
-          </tr>
-        <% }); %>
-        <tr>
+        <thead>
+            <tr>
+                <th>User</th>
+                <th>Date</th>
+                <th>Post</th>
+                <th>View Post</th>
+            </tr>
+        </thead>
+        <tbody>
+            <% posts.forEach(function(p) { %>
+                <tr>
+                    <td class="post-user"><img alt="avatar" src="<%= p.userAvatar %>" referrerpolicy="no-referrer" ><%= p.userName %></td>
+                    <td><%= p.createdAt.toLocaleDateString() %></td>
+                    <td><%= p.content %></td>
+                        <% if (user) { %>
+                        <td><a href="/posts/<%= p._id %>">View Post</a></td>
+                        <% } %>
+                </tr>
+             <% }); %>
+
           <td colspan="3"></td>
-          <td><strong><%= (total / posts.length).toFixed(1) %></strong></td>
         </tr>
       </tbody>
     </table>
   <% } else { %>
     <h5>No Posts Yet</h5>
-  <% } %>
+<% } %>
 
 <%- include('../partials/footer') %>
