User can upload image

--- a/views/posts/new.ejs
+++ b/views/posts/new.ejs
@@ -3,6 +3,8 @@
 <h1>New Post</h1>
 <form id="add-post-form" method="POST"
   action="/posts">
+  <label>Image:</label>
+  <input type="text" name="image" />
   <label>Post:</label>
   <textarea name="content"></textarea>
   <input type="submit" value="Add Post">
