--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -13,6 +13,9 @@
             <tr>
               <td class="post-user"><img alt="avatar" src="<%= post.userAvatar %>" referrerpolicy="no-referrer" ><%= post.userName %></td>
               <td><%= post.createdAt.toLocaleDateString() %></td>
+              <% if (post.image) { %>
+              <td><img src="<%= post.image %>" alt=""/></td>
+              <% } %>
               <td><%= post.content %></td>
               <td>
                 <% if (user?._id.equals(post.user)) { %>
