--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,7 @@
 <%- include('./partials/header') %>
 
-<h1>A place for everything Lakers</h1>
-
+<section id="home">
+    <h1>Your Place For Everything Lakers</h1>
+</section>
+    
 <%- include('./partials/footer') %>
