--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,7 +18,10 @@ body {
 }
 
 #pcontent {
-  border-style: solid;
+  width: 800px;
+  text-align: center;
+  border-style: groove;
+  border-color: rgba(104, 1, 118, 0.9);
   border-radius: 5px;
   background-color: #ebe36a88;
 }
@@ -29,6 +32,7 @@ body {
   font-weight: 1000;
   font-style: bold;
   color: #d3de0e;
+  text-shadow: 7px 7px 10px rgba(104, 1, 118, 1);
   text-align: center;
 }
 
@@ -56,7 +60,7 @@ body > nav {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  padding: 0 10px 0 10px;
+  padding: 0 20px 0 20px;
 }
 
 nav > h1 {
@@ -111,7 +115,7 @@ body > main {
 
 #show-page {
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: 3fr;
   grid-gap: 1rem;
 }
 
@@ -120,15 +124,14 @@ body > main {
   font-size: 30px;
 }
 
-/* .comment-user {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-} */
+.comment-user {
+  display: inline-flex;
+  
+}
 
 .comment-user > img {
   border-radius: 50%;
-  height: 30px;
+  height: 40px;
 }
 
 .comment {
@@ -141,6 +144,13 @@ body > main {
   text-align: center;
 }
 
+#comment {
+border-style: groove;
+border-color: rgba(104, 1, 118, 0.9);
+border-radius: 5px;
+background-color: #ebe36a88;
+}
+
 #add-comment-form ,
 #update-post-form ,
 #add-post-form  {
@@ -150,7 +160,16 @@ body > main {
   align-content: center;
   text-align: center;
 }
+
 .post-user > img{
 border-radius: 50%;
 height: 50px;
 }
+
+#post-img > img {
+  border-style: hidden;
+  border-radius: 20px;
+  height: 250px;
+  width: 375px;
+  border-image: auto;
+ }
