--- a/views/comments/edit.ejs
+++ b/views/comments/edit.ejs
@@ -3,7 +3,7 @@
 <% post.comments.forEach(function(comment) { %>
     <% if (user && comment.user.equals(user._id)) { %>
     <div class="comment">
-      <%= comment.content %><br>
+      <div id="comment"><%= comment.content %></div>
         <form action="/comments/<%= comment._id %>?_method=DELETE" method="POST">
           <button type="submit">Delete Comment</button>
         </form>
