--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  background-image: url(https://scontent-sea1-1.xx.fbcdn.net/v/t1.6435-9/40371575_2161631187212600_797403692599869440_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=5f2048&_nc_ohc=r0COgwWCI_0Ab41qNOK&_nc_ht=scontent-sea1-1.xx&oh=00_AfDwnQPFrJj_d36YE1YX6bmYv8rWUpZrxiL44qy7UKP59w&oe=6652014A);
+  background-image: url(public/stylesheets/LakersLegends.jpeg);
   background-position: center;
   background-size: cover;
   margin: 0;
