update background picture

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  background-image: url(public/stylesheets/LakersLegends.jpeg);
+  background-image: url(../images/LakersLegends.jpeg);
   background-position: center;
   background-size: cover;
   margin: 0;
